# research_drl

./: .gitignore  Dockerfile  Makefile  compose.yaml  dvc.yaml  mlartifacts.dvc  mlruns.dvc  params.yaml  pyarrow.sh  pyproject.toml
.dvc/: config
data/processed/: .gitignore
docs/: log.md
logs/: .gitignore
src/1_prepare/: cleaning.py  normalize.py  sampling.py
src/2_train/: legacy_multi_train.py  multi_train.py  multiprocess_multi_train.py
src/3_evaluate/: evaluate.py
src/99_test/: data.py  flow_gan.py  gan.py
src/lib/: csv.py  deep_learn.py  gan.py  network.py  plot.py
train/: metrics.csv
